Minor UI Change

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						
 					</div>
 					<a class="readmore_link more">Read more <i class="fa fa-angle-down"></i></a>
-					<a class="readmore_link less">Read less <i class="fa fa-angle-up"></i></a>
+					<a class="readmore_link less">Hide <i class="fa fa-angle-up"></i></a>
 				</div>
 
 
